Fri Jan  7 22:10:15 CET 2005 - Onno - sor1.3.5
 * Fixed "Your attempt has been logged." notice after failed oper attempt.
 * Default NS_URL has changed because of the new website.
 * +o users are allowed to send commands at full speed.
 * Back to version check of 1.3.4_1, with option to not reject clients without
   reply.
 * Use ip6.arpa instead of ip6.int for most IPv6 addresses.
 * +g/+s are restricted to opers.
 * NXDOMAIN DNS replies are now handled correctly. (no longer wait for timeout)
 * Desync fix, CNICK fix, /list C fix, some small sendto_* fixes.
 * Address adding/stripping code for server infolines removed.
 * Ident checking code removed.
 * Service code removed.

Sat Jul 17 02:26:59 CDT 2004 - Mysidia - sor1.3.5pre3
 * +r/R usermodes, new /whois entry
 * New ban record types RR and RV   (Require registered, Require-validated
 * nospoof@ is now a URL

Sun Nov 23 05:18:41 PST 2003 - Skandranon
 * Major changes.  Removal of lots of "dead" code that was a #define option
   but was either always defined or always undefined.  This was done to
   simplify the common path code.  Examples are CHROOT, SENDQ_ALWAYS, ...

Wed Jul 16 13:39:51 CDT 2003 - Mysidia - sor1.3.5pre1
 * Ipv6 improved masking support
 * Ipv6 patch [Onno]
 * REQ_VERSION_RESPONSE now separate from NO_VERSION_CHECK
 * Show version reply in whois [Onno]
 * Bugfix [channel.c] rule-based bans, ban list could prevously be truncated 
   during net.merge; this change allows spaces in bans to work properly
 * Don't allow \033, \037, \026, \017, \b, \t, \003, \002, \001, or \240
   in channel names
 * New ircd configuration line: W-line, enhanced K-line for banning by
   information supplied in the User line, usage:

   W:[host]:[reason]:[nickname]:[username]:[sup user]:[sup server]:[real name]
        ^       ^        ^          ^          ^           ^           ^
      host   passwd     name     string4     string5     string6    string7

   For example:
       W::Blah blah:::::Forbidden Realname