@@ -3,7 +3,7 @@
 # Copyright 1996-2003 Michael Graff <explorer@flame.org>
 # You may distribute this file freely providing this notice remains intact.
 #
-IRCD_VERSION="sor1.3.5"
+IRCD_VERSION="sor1.3.6"
 CONF_DATE=`date`
 LAST_VERSION="very very old"
 #
