@@ -185,7 +185,7 @@ install: all
 	@chmod $(IRCDMODE) ${IRCDDIR}/ircd
 	$(CP) src/chkconf ${IRCDDIR}
 	@chmod $(IRCDMODE) ${IRCDDIR}/chkconf
-	touch ${IRCDDIR}/users.log ${IRCDDIR}/opers.log
+	touch ${IRCDDIR}/users.log ${IRCDDIR}/opers.log ${IRCDDIR}/ircd.log
 	./helpdigest ${IRCDDIR}
 	$(CP) doc/example.conf ${IRCDDIR}
 	chmod +x src/buildm4
