@@ -1,3 +1,14 @@
+Sat Jan  8 19:36:44 CET 2005 - Onno - sor1.3.6
+ * Fixed compilation warning on Alpha architecture.
+ * Fixed signal handling: ircd won't ignore all signals anymore after a SIGINT
+   restart.
+ * Fixed logging: ircd now closes all fd's when it forks, and doesn't try to
+   write log messages to fd 0 after starting up anymore.
+ * Status messages now go to ircd.log instead of stderr.
+ * Fixed compilation on old FreeBSD systems.
+ * Fixed bug that could result in dropping a few messages of connecting servers
+   or clients that just opered in a very specific case.
+
 Fri Jan  7 22:10:15 CET 2005 - Onno - sor1.3.5
  * Fixed "Your attempt has been logged." notice after failed oper attempt.
  * Default NS_URL has changed because of the new website.
